--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      rel="stylesheet" />
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link rel="stylesheet" href="C:\Users\noahj\OneDrive\desktop\challenge-5\Develop\style.css" />
+    <link rel="stylesheet" href="./Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
